--- a/frontend/static/css/restorePassword.css
+++ b/frontend/static/css/restorePassword.css
@@ -143,6 +143,13 @@ a {
   text-decoration: none;
   color: white;
 }
+
+input {outline: none;}
+input:-webkit-autofill {
+    -webkit-box-shadow: inset 0 0 0 50px #fff !important; /* Цвет фона */
+    -webkit-text-fill-color: rgb(0, 0, 0) !important; /* цвет текста */
+    color: rgb(7, 7, 7) !important; /* цвет текста */
+}
 @media screen and (max-width: 560px) {
     .main-container {
       padding-top: 72px;
