--- a/frontend/static/css/signUp.css
+++ b/frontend/static/css/signUp.css
@@ -186,6 +186,13 @@ small {
   line-height: 120%;
   color: #f6657f;
 }
+
+input {outline: none;}
+input:-webkit-autofill {
+    -webkit-box-shadow: inset 0 0 0 50px #fff !important; /* Цвет фона */
+    -webkit-text-fill-color: rgb(0, 0, 0) !important; /* цвет текста */
+    color: rgb(7, 7, 7) !important; /* цвет текста */
+}
 @media screen and (max-width: 560px) {
   .main-container {
     padding-top: 72px;
